# TileDB-NYSE-Ingestor

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
ci/: ci_install_tiledb.sh
cmake/: Superbuild.cmake
cmake/Modules/: FindDate_EP.cmake  FindTileDB_EP.cmake
sample_data/: small_EQY_US_ALL_REF_MASTER_20180306  small_EQY_US_ALL_TRADE_20180730  small_SPLITS_US_ALL_BBO_Z_20180730
scripts/benchmark/: Pipfile  README.md  benchmark.py  quote.yml  quote_testing.yml  trade.yml  trade_testing.yml
src/: Array.cc  Array.h  CLI11.hpp  Master.cc  Master.h  OpenBook.cc  OpenBook.h  ProgressBar.hpp  Quote.cc  Quote.h  Trade.cc  Trade.h  buffer.h  main.cc  utils.h
